--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,10 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         <ul>
         {% if site.show_downloads %}
-          <li><a href="https://kem406.github.io/ENSC-E123/"><strong>Home</strong></a></li>
+          <li><a href="https://kem406.github.io/ENSC-E123/">* * *<strong>Home</strong></a></li>
           <li><a href="https://kem406.github.io/ENSC-E123/about/">About<strong>ENSC-E123</strong></a></li>
         {% endif %}
-          <li><a href="http://kem406.github.io">More<strong>Projects</strong></a></li>
+          <li><a href="{{ site.github.owner_url }}">More<strong>Projects</strong></a></li>
         </ul>
       </header>
       <section>
