--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
         <ul>
         {% if site.show_downloads %}
           <li><a href="https://kem406.github.io/ENSC-E123/">* * *<strong>Home</strong></a></li>
-          <li><a href="https://kem406.github.io/ENSC-E123/about/">About<strong>ENSC-E123</strong></a></li>
+          <li><a href="http://www.people.fas.harvard.edu/~thayes/XB/">About<strong>ENSC-E123</strong></a></li>
         {% endif %}
-          <li><a href="{{ site.github.owner_url }}">More<strong>Projects</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}">More<strong>Projects</strong></a></li>
         </ul>
       </header>
       <section>
