--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <ul>
         {% if site.show_downloads %}
           <li><a href="https://kem406.github.io/ENSC-E123/">* * *<strong>Home</strong></a></li>
-          <li><a href="http://www.people.fas.harvard.edu/~thayes/XB/">About<strong>ENSC-E123</strong></a></li>
+          <li><a href="http://www.people.fas.harvard.edu/~thayes/XB/">Course<strong>Info</strong></a></li>
         {% endif %}
           <li><a href="{{ site.github.owner_url }}">More<strong>Projects</strong></a></li>
         </ul>
